--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@expo-google-fonts/poppins": "^0.1.0",
     "@klarna/react-native-vector-drawable": "^0.3.0",
     "@react-native-async-storage/async-storage": "^1.15.4",
+    "@react-native-community/google-signin": "^5.0.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-picker/picker": "^1.16.1",
     "@react-navigation/drawer": "^5.12.5",
@@ -29,6 +30,7 @@
     "react-native-animated-loader": "0.0.9",
     "react-native-elements": "^3.4.1",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-paper": "^4.8.1",
     "react-native-reanimated": "^2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "^3.2.0",
